--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
     <meta charset="utf-8">
-    <title>Pera Swarm | University of Peradeniya</title>
+    <title>Pera Ride | University of Peradeniya</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
     <!--<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>-->
 </head>
@@ -35,7 +35,7 @@
         <div class="w3-display-topleft w3-padding-large w3-xlarge">
         </div>
         <div class="w3-display-middle">
-            <h1 align="center" class="w3-jumbo w3-animate-top">Pera-Swarm
+            <h1 align="center" class="w3-jumbo w3-animate-top">Pera-Ride
             </h1>
             <hr class="w3-border-white" style="margin:auto;width:40%"><br>
             <div class="w3-container w3-center">
